<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_primary"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etMail"
                style="@style/et_primary"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etClave"
                style="@style/et_primary"
                android:layout_marginBottom="15dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bLogin"
                style="@style/b_primary"
                android:layout_width="match_parent"
                android:text="@string/action_sign_in" />

        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:indeterminate="true"
        android:theme="@style/progress_bar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvProgressBar"
        style="@style/tv_primary_progress_bar"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_progress_bar"
        android:textAlignment="center"
        android:visibility="gone" />

</RelativeLayout>